--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,19 @@
 .App {
   display: flex;
   justify-content: center;
+  flex-direction: column;
+}
+
+.header{
+  display: flex;
+  justify-content: center;
   gap: 70px;
+
+}
+
+.image-container {
+  display: grid;
+  grid-template-columns: repeat(4, minmax(0, 1fr));
+  align-items: start;
+  column-gap: 50px;
 }
