--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,28 @@
 
 .image-container {
   display: grid;
-  grid-template-columns: repeat(4, minmax(0, 1fr));
+  grid-template-columns: repeat(3, minmax(0, 1fr));
   align-items: start;
   column-gap: 50px;
 }
+
+.image-column {
+  display: grid;
+  grid-template-columns: minmax(0,1fr);
+  justify-items: center;
+  row-gap: 50px;
+}
+
+
+@media (max-width: 90rem) {
+  .image-container {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+}  
+
+@media (max-width: 48rem) {
+  .image-container {
+    grid-template-columns: 1fr;
+  }
+}  
+
